// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InstanceForm Component Add Instance should render add instance form correctly 1`] = `
<div>
  <div
    class="dialog-provision-form"
  >
    <form>
      <h3>
        Main Info
      </h3>
      <div
        class="form-horizontal ae-main-info-section"
      >
        <div
          class="form-group"
        >
          <label
            class="col-md-2 control-label"
            for="namespace_path"
          >
            Fully Qualified Name
          </label>
          <div
            class="col-md-8"
          >
            <div
              class="cds--form-item cds--text-input-wrapper cds--text-input-wrapper--readonly"
            >
              <div
                class="cds--text-input__label-wrapper"
              >
                <label
                  class="cds--label cds--visually-hidden"
                  dir="auto"
                  for="namespace_path"
                />
              </div>
              <div
                class="cds--text-input__field-outer-wrapper"
              >
                <div
                  class="cds--text-input__field-wrapper"
                >
                  <input
                    class="cds--text-input"
                    id="namespace_path"
                    readonly=""
                    type="text"
                    value="Domain/Namespace/Class"
                  />
                  <span
                    aria-atomic="true"
                    aria-live="assertive"
                    class="cds--text-input__counter-alert"
                    role="alert"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="col-md-2 control-label"
            for="name"
          >
            Name
          </label>
          <div
            class="col-md-8"
          >
            <div
              class="cds--form-item cds--text-input-wrapper"
            >
              <div
                class="cds--text-input__label-wrapper"
              >
                <label
                  class="cds--label cds--visually-hidden"
                  dir="auto"
                  for="name"
                />
              </div>
              <div
                class="cds--text-input__field-outer-wrapper"
              >
                <div
                  class="cds--text-input__field-wrapper"
                >
                  <input
                    class="cds--text-input"
                    id="name"
                    maxlength="255"
                    type="text"
                    value=""
                  />
                  <span
                    aria-atomic="true"
                    aria-live="assertive"
                    class="cds--text-input__counter-alert"
                    role="alert"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="col-md-2 control-label"
            for="display_name"
          >
            Display Name
          </label>
          <div
            class="col-md-8"
          >
            <div
              class="cds--form-item cds--text-input-wrapper"
            >
              <div
                class="cds--text-input__label-wrapper"
              >
                <label
                  class="cds--label cds--visually-hidden"
                  dir="auto"
                  for="display_name"
                />
              </div>
              <div
                class="cds--text-input__field-outer-wrapper"
              >
                <div
                  class="cds--text-input__field-wrapper"
                >
                  <input
                    class="cds--text-input"
                    id="display_name"
                    maxlength="255"
                    type="text"
                    value=""
                  />
                  <span
                    aria-atomic="true"
                    aria-live="assertive"
                    class="cds--text-input__counter-alert"
                    role="alert"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="col-md-2 control-label"
            for="description"
          >
            Description
          </label>
          <div
            class="col-md-8"
          >
            <div
              class="cds--form-item cds--text-input-wrapper"
            >
              <div
                class="cds--text-input__label-wrapper"
              >
                <label
                  class="cds--label cds--visually-hidden"
                  dir="auto"
                  for="description"
                />
              </div>
              <div
                class="cds--text-input__field-outer-wrapper"
              >
                <div
                  class="cds--text-input__field-wrapper"
                >
                  <input
                    class="cds--text-input"
                    id="description"
                    maxlength="255"
                    type="text"
                    value=""
                  />
                  <span
                    aria-atomic="true"
                    aria-live="assertive"
                    class="cds--text-input__counter-alert"
                    role="alert"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr />
      <h3>
        Fields
      </h3>
      <div
        class="ae-instance-fields-table"
      >
        <div
          class="miq-data-table instance-fields"
        >
          <div
            class="cds--data-table-content"
          >
            <table
              class="cds--data-table cds--data-table--lg cds--data-table--visible-overflow-menu"
            >
              <thead>
                <tr>
                  <th
                    class="miq-data-table-header"
                    scope="col"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Name
                      <div
                        class="cds--table-header-label--decorator-inner"
                      />
                    </div>
                  </th>
                  <th
                    class="miq-data-table-header"
                    scope="col"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Value
                      <div
                        class="cds--table-header-label--decorator-inner"
                      />
                    </div>
                  </th>
                  <th
                    class="miq-data-table-header"
                    scope="col"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Collect
                      <div
                        class="cds--table-header-label--decorator-inner"
                      />
                    </div>
                  </th>
                  <th
                    class="miq-data-table-header"
                    scope="col"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Message
                      <div
                        class="cds--table-header-label--decorator-inner"
                      />
                    </div>
                  </th>
                  <th
                    class="miq-data-table-header"
                    scope="col"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Edit
                      <div
                        class="cds--table-header-label--decorator-inner"
                      />
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                aria-live="polite"
              >
                <tr
                  class="simple-row"
                  tabindex=""
                  title=""
                >
                  <td>
                    <div
                      class="cell"
                      title=""
                    >
                      <i
                        class="fa-lg icon ff ff-attribute"
                      />
                      <i
                        class="fa-lg icon pficon-ok-closed"
                      />
                      <span
                        class="cds--front-line"
                        title="Field 1 (field1)"
                      >
                        Field 1 (field1)
                      </span>
                    </div>
                  </td>
                  <td>
                    <div
                      class="cell"
                    >
                      <span
                        class="cds--front-line"
                        title="value1"
                      >
                        value1
                      </span>
                    </div>
                  </td>
                  <td>
                    <div
                      class="cell"
                    >
                      <span
                        class="cds--front-line"
                        title=""
                      />
                    </div>
                  </td>
                  <td>
                    <div
                      class="cell"
                    >
                      <span
                        class="cds--front-line"
                        title=""
                      />
                    </div>
                  </td>
                  <td>
                    <div
                      class="cell"
                    >
                      <button
                        class="miq-data-table-button cds--btn cds--btn--sm cds--layout--size-sm cds--btn--primary"
                        tabindex="0"
                        title="Edit"
                        type="button"
                      >
                        <span
                          class="cds--front-line"
                          title="Edit"
                        >
                          Edit
                        </span>
                      </button>
                    </div>
                  </td>
                </tr>
                <tr
                  class="simple-row"
                  tabindex=""
                  title=""
                >
                  <td>
                    <div
                      class="cell"
                      title=""
                    >
                      <i
                        class="fa-lg icon ff ff-attribute"
                      />
                      <i
                        class="fa-lg icon ff ff-integer"
                      />
                      <i
                        class="fa-lg icon pficon-ok-closed"
                      />
                      <span
                        class="cds--front-line"
                        title="Field 2 (field2)"
                      >
                        Field 2 (field2)
                      </span>
                    </div>
                  </td>
                  <td>
                    <div
                      class="cell"
                    >
                      <span
                        class="cds--front-line"
                        title="42"
                      >
                        42
                      </span>
                    </div>
                  </td>
                  <td>
                    <div
                      class="cell"
                    >
                      <span
                        class="cds--front-line"
                        title=""
                      />
                    </div>
                  </td>
                  <td>
                    <div
                      class="cell"
                    >
                      <span
                        class="cds--front-line"
                        title=""
                      />
                    </div>
                  </td>
                  <td>
                    <div
                      class="cell"
                    >
                      <button
                        class="miq-data-table-button cds--btn cds--btn--sm cds--layout--size-sm cds--btn--primary"
                        tabindex="0"
                        title="Edit"
                        type="button"
                      >
                        <span
                          class="cds--front-line"
                          title="Edit"
                        >
                          Edit
                        </span>
                      </button>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        class="custom-button-wrapper ae-form-button-wrapper"
      >
        <button
          class="btnRight cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          type="submit"
        >
          Add
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
    <div
      class="cds--layer-one cds--modal"
      role="presentation"
    >
      <span
        class="cds--visually-hidden"
        role="link"
        tabindex="0"
      >
        Focus sentinel
      </span>
      <div
        aria-label="Edit Field"
        aria-modal="true"
        class="cds--modal-container"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="cds--modal-header"
        >
          <div
            class="cds--modal-close-button"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--left cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-label="Close"
                  aria-labelledby="tooltip-:rc:"
                  class="cds--modal-close cds--btn cds--btn--primary cds--btn--icon-only"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="cds--modal-close__icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-:rc:"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Close
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </div>
          <h2
            class="cds--modal-header__heading"
            dir="auto"
            id="cds--modal-header__heading--modal-id-:ra:"
          >
            Edit Field
          </h2>
        </div>
        <div
          class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade"
          id="cds--modal-body--modal-id-:ra:"
        />
      </div>
      <span
        class="cds--visually-hidden"
        role="link"
        tabindex="0"
      >
        Focus sentinel
      </span>
    </div>
  </div>
</div>
`;

exports[`InstanceForm Component Edit Instance should render edit instance form correctly 1`] = `
<div>
  <div
    class="dialog-provision-form"
  >
    <form>
      <h3>
        Main Info
      </h3>
      <div
        class="form-horizontal ae-main-info-section"
      >
        <div
          class="form-group"
        >
          <label
            class="col-md-2 control-label"
            for="namespace_path"
          >
            Fully Qualified Name
          </label>
          <div
            class="col-md-8"
          >
            <div
              class="cds--form-item cds--text-input-wrapper cds--text-input-wrapper--readonly"
            >
              <div
                class="cds--text-input__label-wrapper"
              >
                <label
                  class="cds--label cds--visually-hidden"
                  dir="auto"
                  for="namespace_path"
                />
              </div>
              <div
                class="cds--text-input__field-outer-wrapper"
              >
                <div
                  class="cds--text-input__field-wrapper"
                >
                  <input
                    class="cds--text-input"
                    id="namespace_path"
                    readonly=""
                    type="text"
                    value="Domain/Namespace/Class"
                  />
                  <span
                    aria-atomic="true"
                    aria-live="assertive"
                    class="cds--text-input__counter-alert"
                    role="alert"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="col-md-2 control-label"
            for="name"
          >
            Name
          </label>
          <div
            class="col-md-8"
          >
            <div
              class="cds--form-item cds--text-input-wrapper"
            >
              <div
                class="cds--text-input__label-wrapper"
              >
                <label
                  class="cds--label cds--visually-hidden"
                  dir="auto"
                  for="name"
                />
              </div>
              <div
                class="cds--text-input__field-outer-wrapper"
              >
                <div
                  class="cds--text-input__field-wrapper"
                >
                  <input
                    class="cds--text-input"
                    id="name"
                    maxlength="255"
                    type="text"
                    value="test_instance"
                  />
                  <span
                    aria-atomic="true"
                    aria-live="assertive"
                    class="cds--text-input__counter-alert"
                    role="alert"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="col-md-2 control-label"
            for="display_name"
          >
            Display Name
          </label>
          <div
            class="col-md-8"
          >
            <div
              class="cds--form-item cds--text-input-wrapper"
            >
              <div
                class="cds--text-input__label-wrapper"
              >
                <label
                  class="cds--label cds--visually-hidden"
                  dir="auto"
                  for="display_name"
                />
              </div>
              <div
                class="cds--text-input__field-outer-wrapper"
              >
                <div
                  class="cds--text-input__field-wrapper"
                >
                  <input
                    class="cds--text-input"
                    id="display_name"
                    maxlength="255"
                    type="text"
                    value="Test Instance"
                  />
                  <span
                    aria-atomic="true"
                    aria-live="assertive"
                    class="cds--text-input__counter-alert"
                    role="alert"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="col-md-2 control-label"
            for="description"
          >
            Description
          </label>
          <div
            class="col-md-8"
          >
            <div
              class="cds--form-item cds--text-input-wrapper"
            >
              <div
                class="cds--text-input__label-wrapper"
              >
                <label
                  class="cds--label cds--visually-hidden"
                  dir="auto"
                  for="description"
                />
              </div>
              <div
                class="cds--text-input__field-outer-wrapper"
              >
                <div
                  class="cds--text-input__field-wrapper"
                >
                  <input
                    class="cds--text-input"
                    id="description"
                    maxlength="255"
                    type="text"
                    value="Test Description"
                  />
                  <span
                    aria-atomic="true"
                    aria-live="assertive"
                    class="cds--text-input__counter-alert"
                    role="alert"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr />
      <h3>
        Fields
      </h3>
      <div
        class="ae-instance-fields-table"
      >
        <div
          class="miq-data-table instance-fields"
        >
          <div
            class="cds--data-table-content"
          >
            <table
              class="cds--data-table cds--data-table--lg cds--data-table--visible-overflow-menu"
            >
              <thead>
                <tr>
                  <th
                    class="miq-data-table-header"
                    scope="col"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Name
                      <div
                        class="cds--table-header-label--decorator-inner"
                      />
                    </div>
                  </th>
                  <th
                    class="miq-data-table-header"
                    scope="col"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Value
                      <div
                        class="cds--table-header-label--decorator-inner"
                      />
                    </div>
                  </th>
                  <th
                    class="miq-data-table-header"
                    scope="col"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Collect
                      <div
                        class="cds--table-header-label--decorator-inner"
                      />
                    </div>
                  </th>
                  <th
                    class="miq-data-table-header"
                    scope="col"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Message
                      <div
                        class="cds--table-header-label--decorator-inner"
                      />
                    </div>
                  </th>
                  <th
                    class="miq-data-table-header"
                    scope="col"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Edit
                      <div
                        class="cds--table-header-label--decorator-inner"
                      />
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                aria-live="polite"
              >
                <tr
                  class="simple-row"
                  tabindex=""
                  title=""
                >
                  <td>
                    <div
                      class="cell"
                      title=""
                    >
                      <i
                        class="fa-lg icon ff ff-attribute"
                      />
                      <i
                        class="fa-lg icon pficon-ok-closed"
                      />
                      <span
                        class="cds--front-line"
                        title="Field 1 (field1)"
                      >
                        Field 1 (field1)
                      </span>
                    </div>
                  </td>
                  <td>
                    <div
                      class="cell"
                    >
                      <span
                        class="cds--front-line"
                        title="value1"
                      >
                        value1
                      </span>
                    </div>
                  </td>
                  <td>
                    <div
                      class="cell"
                    >
                      <span
                        class="cds--front-line"
                        title=""
                      />
                    </div>
                  </td>
                  <td>
                    <div
                      class="cell"
                    >
                      <span
                        class="cds--front-line"
                        title=""
                      />
                    </div>
                  </td>
                  <td>
                    <div
                      class="cell"
                    >
                      <button
                        class="miq-data-table-button cds--btn cds--btn--sm cds--layout--size-sm cds--btn--primary"
                        tabindex="0"
                        title="Edit"
                        type="button"
                      >
                        <span
                          class="cds--front-line"
                          title="Edit"
                        >
                          Edit
                        </span>
                      </button>
                    </div>
                  </td>
                </tr>
                <tr
                  class="simple-row"
                  tabindex=""
                  title=""
                >
                  <td>
                    <div
                      class="cell"
                      title=""
                    >
                      <i
                        class="fa-lg icon ff ff-attribute"
                      />
                      <i
                        class="fa-lg icon ff ff-integer"
                      />
                      <i
                        class="fa-lg icon pficon-ok-closed"
                      />
                      <span
                        class="cds--front-line"
                        title="Field 2 (field2)"
                      >
                        Field 2 (field2)
                      </span>
                    </div>
                  </td>
                  <td>
                    <div
                      class="cell"
                    >
                      <span
                        class="cds--front-line"
                        title="42"
                      >
                        42
                      </span>
                    </div>
                  </td>
                  <td>
                    <div
                      class="cell"
                    >
                      <span
                        class="cds--front-line"
                        title=""
                      />
                    </div>
                  </td>
                  <td>
                    <div
                      class="cell"
                    >
                      <span
                        class="cds--front-line"
                        title=""
                      />
                    </div>
                  </td>
                  <td>
                    <div
                      class="cell"
                    >
                      <button
                        class="miq-data-table-button cds--btn cds--btn--sm cds--layout--size-sm cds--btn--primary"
                        tabindex="0"
                        title="Edit"
                        type="button"
                      >
                        <span
                          class="cds--front-line"
                          title="Edit"
                        >
                          Edit
                        </span>
                      </button>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        class="custom-button-wrapper ae-form-button-wrapper"
      >
        <button
          class="btnRight cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          type="submit"
        >
          Save
        </button>
        <button
          class="btnRight cds--btn cds--btn--secondary cds--btn--disabled"
          disabled=""
          type="button"
        >
          Reset
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
    <div
      class="cds--layer-one cds--modal"
      role="presentation"
    >
      <span
        class="cds--visually-hidden"
        role="link"
        tabindex="0"
      >
        Focus sentinel
      </span>
      <div
        aria-label="Edit Field"
        aria-modal="true"
        class="cds--modal-container"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="cds--modal-header"
        >
          <div
            class="cds--modal-close-button"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--left cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-label="Close"
                  aria-labelledby="tooltip-:r1o:"
                  class="cds--modal-close cds--btn cds--btn--primary cds--btn--icon-only"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="cds--modal-close__icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-:r1o:"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Close
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </div>
          <h2
            class="cds--modal-header__heading"
            dir="auto"
            id="cds--modal-header__heading--modal-id-:r1m:"
          >
            Edit Field
          </h2>
        </div>
        <div
          class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade"
          id="cds--modal-body--modal-id-:r1m:"
        />
      </div>
      <span
        class="cds--visually-hidden"
        role="link"
        tabindex="0"
      >
        Focus sentinel
      </span>
    </div>
  </div>
</div>
`;
